--- a/css/styles.css
+++ b/css/styles.css
@@ -71,12 +71,6 @@ h2 {
 }
 
 
-.mainTo-doList {
-    display: flex;
-    justify-content: center;
-    background-color: rgb(255, 251, 251);
-}
-
 .imgMainSection {
     width: 100%;
 }
@@ -95,18 +89,7 @@ h2 {
 }
 
 
-.cuadroTareas {
-    text-align: center;
-    width: 30%;
-    border: 3px;
-    margin: 30px;
-    padding: 20px;
-    border: 3px solid rgb(193, 71, 0);
 
-    .listaTareas {
-        padding-top: 15px;
-    }
-}
 
 ul {
     list-style: none;
@@ -150,12 +133,13 @@ li {
     .textosYVideo {
         .textos {
             .textos1 {
-                h3{
+                h3 {
                     font-weight: 700;
                     color: rgba(0, 0, 0, 0.874);
                     font-size: 2.3rem;
                 }
-                .parrafoCorto1{
+
+                .parrafoCorto1 {
                     font-size: 1.1rem;
                     color: #c77b00;
                     font-weight: 700;
@@ -170,18 +154,19 @@ li {
             }
 
             .textos2 {
-                h3{
+                h3 {
                     font-weight: 700;
                     color: rgba(0, 0, 0, 0.874);
                     font-size: 2.3rem;
                 }
-                .parrafoCorto2{
+
+                .parrafoCorto2 {
                     font-size: 1.1rem;
                     color: #497d7e;
                     font-weight: 700;
                 }
 
-                .parrafoLargo2{
+                .parrafoLargo2 {
                     font-weight: 500;
                     color: #25221ea8;
                     font-size: 1.35rem;
@@ -190,36 +175,119 @@ li {
             }
 
             .textos3 {
-                h3{
+                h3 {
                     font-weight: 700;
                     color: black;
                 }
-                .parrafoCorto3{
+
+                .parrafoCorto3 {
                     color: #e34432;
                     font-weight: 700;
                 }
 
-                .parrafoLargo3{
+                .parrafoLargo3 {
                     width: 28%;
                     font-weight: 500;
                 }
             }
 
             .textos4 {
-                h3{
+                h3 {
                     font-weight: 700;
                     color: black;
                 }
-                .parrafoCorto4{
+
+                .parrafoCorto4 {
                     color: #4c7a45;
                     font-weight: 700;
                 }
 
-                .parrafoLargo4{
+                .parrafoLargo4 {
                     width: 30%;
                     font-weight: 500;
                 }
             }
         }
     }
+}
+
+
+/*--------------------*/
+
+.mainTo-doList {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgb(255, 251, 251);
+
+    h1 {
+        color: #151515;
+        padding-left: 20%;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+
+    .checklist-icon {
+        width: 60px;
+        height: 60px;
+        margin-left: 50px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+}
+
+.cuadroListas {
+    background-color: rgb(0, 72, 255);
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.cuadroAgregarTarea {
+    text-align: center;
+    width: 30%;
+    border: 3px;
+    margin: 30px;
+    padding: 20px;
+
+    .cuadroACompletar {
+        padding: 5px;
+    }
+
+    .botonAgregarTarea {
+        padding: 5px;
+        border-radius: 5px;
+    }
+
+}
+
+.titulosPreLista{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 100%;
+    h2{
+        color: #151515 !important;
+    }
+}
+.divLista {
+    background-color: #4c7a45;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+
+}
+
+#listaTareas {
+    width: 50%;
+    background-color: #e34432;
+    padding-top: 15px;
+    padding-left: 10%;
+    border: 3px solid brown;
+    margin: 30px;
+}
+.cuadroProgreso{
+    width: 50%;
+    background-color: chartreuse;
 }
